--- a/vs/amaterasu2.vcxproj.filters
+++ b/vs/amaterasu2.vcxproj.filters
@@ -19,8 +19,8 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Inf Include="amaterasu2.inf">
+    <Inf Include="..\amaterasu2.inf">
       <Filter>Driver Files</Filter>
     </Inf>
-  </ItemGroup>  
+  </ItemGroup>
 </Project>
